--- a/login.html
+++ b/login.html
@@ -136,11 +136,11 @@
         <form id="loginForm" class="login-form">
             <div class="input-group">
                 <label for="email">Alamat Email</label>
-                <input type="email" id="email" name="email" required placeholder="admin@gmail.com">
+                <input type="email" id="email" name="email" required placeholder="account@gmail.com">
             </div>
             <div class="input-group">
                 <label for="password">Kata Sandi</label>
-                <input type="password" id="password" name="password" required placeholder="adminonly">
+                <input type="password" id="password" name="password" required placeholder="password">
             </div>
             <button type="submit" class="login-button">Masuk</button>
         </form>
